horizontal navigation bar

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,13 +1,12 @@
-<!--How do I make this layout horizontal instead of the (apparent default) vertical ?-->
-<mat-nav-list>
-  <!--https://material.angular.io/components/list/overview-->
-  <mat-list-item>
-    <a [routerLink]="['/home']">Home</a>
-  </mat-list-item>
-  <mat-list-item>
-    <a [routerLink]="['/about']">About</a>
-  </mat-list-item>
-  <mat-list-item>
-    <a [routerLink]="['/contact']">Contact Us</a>
-  </mat-list-item>
-</mat-nav-list>
+<nav mat-tab-nav-bar [backgroundColor]="background">
+  <a mat-tab-link
+     *ngFor="let link of navLinks"
+     [routerLink]="link.path"
+     routerLinkActive #rla="routerLinkActive"
+     [active]="rla.isActive">
+    {{link.label}}
+  </a>
+</nav>
+
+
+
