--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,3 @@
 <p class="mat-body-1">
-  Using Angular version {{angularVersion}}
+  Using Angular version {{angularVersion}} and Angular Material version {{materialVersion}}
 </p>
