--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,9 +1,9 @@
 <!-- works in Angular Material 6.4.5 as of late August 2018 -->
-<mat-toolbar #navLinks color="primary">
+<mat-toolbar color="primary">
   <mat-toolbar-row #toolbarRow>
     <a mat-button [routerLink]="['/']">Angular Material Navigation</a>
-    <span>&nbsp;</span>
-    <a mat-button #navAnchor *ngFor="let link of links" [routerLink]="link.path" [routerLinkActive]="['mat-button-toggle-checked', 'active-route']" #rla="routerLinkActive">
+    <a mat-button *ngFor="let link of links" [routerLink]="link.path" [routerLinkActive]="['mat-button-toggle-checked', 'active-route']"
+      #rla="routerLinkActive">
       {{link.label}}
     </a>
   </mat-toolbar-row>
