format the components

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,7 @@
-<p class="mat-body-1">
-  Using Angular version {{angularVersion}} and Angular Material version {{materialVersion}}
-</p>
+<div fxLayout="column" fxLayoutAlign="start center" class="mat-body-1">
+  Using:
+  <ul>
+    <li>Angular version {{angularVersion}}</li>
+    <li>Angular Material version {{materialVersion}}</li>
+  </ul>
+</div>
