--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,3 @@
-<p class="mat-body-1">
-  contact works!
-</p>
+<div fxLayout="column" fxLayoutAlign="start center" class="mat-body-1">
+  Contact Us
+</div>
