Updated Page Not Found component

--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,3 +1,6 @@
-<p>
-  page-not-found works!
-</p>
+<div class="mat-typography">
+  <div class="mat-background-warn">
+    That page does not exist
+  </div>
+</div>
+
