--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,6 +1,3 @@
-<div class="mat-typography">
-  <div class="mat-background-warn">
+<div fxLayout="column" fxLayoutAlign="start center" mat-chip  >
     That page does not exist
-  </div>
 </div>
-
