made About page text bigger

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,9 @@
 <div fxLayout="column" fxLayoutAlign="start center" class="mat-body-1">
-  Using:
+  <span class="mat-h2">Using:</span>
+  <section class="mat-h3">
   <ul>
     <li>Angular version {{angularVersion}}</li>
     <li>Angular Material version {{materialVersion}}</li>
   </ul>
+  </section>
 </div>
