--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<!-- works in Angular Material 7.0.0 as of late October 2018 -->
+<!-- works in Angular 7.2.4 + Angular Material 7.3.2 as of February 14, 2019 -->
 <mat-toolbar color="primary">
   <mat-toolbar-row #toolbarRow>
     <a mat-button [routerLink]="['/']">Angular Material Navigation</a>
