--- a/src/app/picture-grid/picture-grid.component.html
+++ b/src/app/picture-grid/picture-grid.component.html
@@ -9,7 +9,7 @@
     {{tile.text}}
   </mat-grid-tile>
 </mat-grid-list>-->
-
+<div class="spacer"></div>
 <mat-grid-list cols="4" rowheight="10em" gutterSize="0.8em">
 
   <mat-grid-tile>
