--- a/src/app/picture-grid/picture-grid.component.html
+++ b/src/app/picture-grid/picture-grid.component.html
@@ -1,26 +1,19 @@
 <!--https://material.angular.io/components/grid-list/overview-->
 <!--https://material.io/design/components/image-lists.html-->
-<!--<mat-grid-list cols="4" rowHeight="10em" gutterSize="2em">
-  <mat-grid-tile
-    *ngFor="let tile of tiles"
-    [colspan]="tile.cols"
-    [rowspan]="tile.rows"
-    [style.background]="tile.color">
-    {{tile.text}}
-  </mat-grid-tile>
-</mat-grid-list>-->
+<!--https://tburleson-layouts-demos.firebaseapp.com/#/docs-->
 <div class="spacer"></div>
+<div class="flex-container" fxLayout.xs="column">
+  <div class="flex-item">1</div>
+  <div class="flex-item">2</div>
+  <div class="flex-item">3</div>
+  <div class="flex-item">4</div>
+  <div class="flex-item">5</div>
+  <div class="flex-item">6</div>
+</div>
+
+<!--
 <mat-grid-list cols="4" rowheight="10em" gutterSize="0.8em">
 
-  <mat-grid-tile>
-    <img src="assets/photos/hotel.jpg" alt="hotel">
-    <mat-grid-tile-footer>"Virtual Hotel Service Announced"</mat-grid-tile-footer>
-  </mat-grid-tile>
-
-  <mat-grid-tile>
-    <img src="assets/photos/divorce.jpg" alt="divorce" height="100%">
-    <mat-grid-tile-footer>"Declining Divorce Rates Suprise Researchers"</mat-grid-tile-footer>
-  </mat-grid-tile>
 
   <mat-grid-tile>
     <img src="assets/photos/room2.jpg" alt="facelift" height="100%">
@@ -43,3 +36,4 @@
   </mat-grid-tile>
 
 </mat-grid-list>
+-->
