make angular version variable private

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,7 +2,7 @@
   <span class="mat-h2">Using:</span>
   <section class="mat-h3">
   <ul>
-    <li>Angular version {{AngularVersion}}</li>
+    <li>Angular version {{angularVersion}}</li>
     <li>Angular Material version {{materialVersion}}</li>
   </ul>
   </section>
