--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -2,9 +2,14 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row #toolbarRow>
     <a mat-button [routerLink]="['/']">Angular Material Navigation</a>
-    <a mat-button *ngFor="let link of links" [routerLink]="link.path" [routerLinkActive]="['mat-button-toggle-checked', 'active-route']"
-      #rla="routerLinkActive">
-      {{link.label}}
-    </a>
+    <ng-template ngFor let-link [ngForOf]="links">
+      <a mat-button
+        [routerLink]="link.path"
+        [routerLinkActive]="['mat-button-toggle-checked', 'active-route']"
+        #rla="routerLinkActive"
+      >
+        {{ link.label }}</a
+      >
+    </ng-template>
   </mat-toolbar-row>
 </mat-toolbar>
