--- a/src/app/picture-grid/picture-grid.component.html
+++ b/src/app/picture-grid/picture-grid.component.html
@@ -1,39 +1,56 @@
 <!--https://material.angular.io/components/grid-list/overview-->
 <!--https://material.io/design/components/image-lists.html-->
 <!--https://tburleson-layouts-demos.firebaseapp.com/#/docs-->
-<div class="spacer"></div>
+ <div class="spacer"></div>
+ <!--
 <div class="flex-container" fxLayout.xs="column">
-  <div class="flex-item">1</div>
-  <div class="flex-item">2</div>
-  <div class="flex-item">3</div>
-  <div class="flex-item">4</div>
+  <div class="flex-item">
+    <img
+      src="../../assets/photos/room2.jpg"
+      alt="facelift"
+      title="Hotel Gets Facelift"
+    />
+  </div>
+  <div class="flex-item">
+    <img src="../../assets/photos/story1.jpg" alt="roaring" />
+  </div>
+
+  <div class="flex-item">
+    <img src="../../assets/photos/story3.jpg" alt="jail"  title="Politician Behind Bars"/>
+  </div>
+  <div class="flex-item">
+    <img
+      src="../../assets/photos/story4.jpg"
+      alt="airportwifi" title="New WIFI in Airports"
+
+    />
+  </div>
   <div class="flex-item">5</div>
   <div class="flex-item">6</div>
 </div>
+-->
 
-<!--
-<mat-grid-list cols="4" rowheight="10em" gutterSize="0.8em">
 
+<mat-grid-list cols="3" rowheight="10em" gutterSize="0.8em">
 
   <mat-grid-tile>
     <img src="assets/photos/room2.jpg" alt="facelift" height="100%">
-    <mat-grid-tile-footer>"Hotel Gets Facelift"</mat-grid-tile-footer>
+    <mat-grid-tile-footer>Hotel Gets Facelift</mat-grid-tile-footer>
   </mat-grid-tile>
 
   <mat-grid-tile>
     <img src="assets/photos/story1.jpg" alt="roaring">
-    <mat-grid-tile-footer>"Roaring 20's Hotel Reopens"</mat-grid-tile-footer>
+    <mat-grid-tile-footer>Roaring 20's Hotel Reopens</mat-grid-tile-footer>
   </mat-grid-tile>
 
   <mat-grid-tile>
     <img src="assets/photos/story3.jpg" alt="jail">
-    <mat-grid-tile-footer>"Politician Behind Bars"</mat-grid-tile-footer>
+    <mat-grid-tile-footer>Politician Behind Bars</mat-grid-tile-footer>
   </mat-grid-tile>
 
   <mat-grid-tile>
     <img src="assets/photos/story4.jpg" alt="airportwifi">
-    <mat-grid-tile-footer>"New WIFI in Airports"</mat-grid-tile-footer>
+    <mat-grid-tile-footer>New WIFI in Airports</mat-grid-tile-footer>
   </mat-grid-tile>
 
 </mat-grid-list>
--->
