change rowHeight to ratio, img 100% h x w

--- a/src/app/picture-grid/picture-grid.component.html
+++ b/src/app/picture-grid/picture-grid.component.html
@@ -2,25 +2,41 @@
 <!--https://material.io/design/components/image-lists.html-->
 <!--https://tburleson-layouts-demos.firebaseapp.com/#/docs-->
 <div class="spacer"></div>
-
-<mat-grid-list cols="3" rowheight="10em" gutterSize="0.8em">
+<!-- WARNING: rowHeight, not rowheight -->
+<mat-grid-list cols="3" rowHeight="3:2" gutterSize="0.8em">
+  
   <mat-grid-tile>
-    <img src="assets/photos/room2.jpg" alt="facelift" height="100%" />
+    <img src="assets/photos/room2.jpg" alt="facelift" height="100%" width="100%" />
     <mat-grid-tile-footer>Hotel Gets Facelift</mat-grid-tile-footer>
   </mat-grid-tile>
 
   <mat-grid-tile>
-    <img src="assets/photos/story1.jpg" alt="roaring" />
+    <img src="assets/photos/story1.jpg" alt="roaring"  height="100%" width="100%" />
     <mat-grid-tile-footer>Roaring 20's Hotel Reopens</mat-grid-tile-footer>
   </mat-grid-tile>
 
   <mat-grid-tile>
-    <img src="assets/photos/story3.jpg" alt="jail" />
+    <img src="assets/photos/story2.jpg" alt="car"  height="100%" width="100%" />
+    <mat-grid-tile-footer>Car</mat-grid-tile-footer>
+  </mat-grid-tile>
+
+  <mat-grid-tile>
+    <img src="assets/photos/story3.jpg" alt="jail"  height="100%" width="100%" />
     <mat-grid-tile-footer>Politician Behind Bars</mat-grid-tile-footer>
   </mat-grid-tile>
 
   <mat-grid-tile>
-    <img src="assets/photos/story4.jpg" alt="airportwifi" />
+    <img src="assets/photos/story4.jpg" alt="airportwifi"  height="100%" width="100%" />
     <mat-grid-tile-footer>New WIFI in Airports</mat-grid-tile-footer>
+  </mat-grid-tile>
+
+  <mat-grid-tile>
+    <img src="assets/photos/divorce.jpg" alt="divorce"  height="100%" width="100%" />
+    <mat-grid-tile-footer>Divorce</mat-grid-tile-footer>
+  </mat-grid-tile>
+
+  <mat-grid-tile>
+    <img src="assets/photos/hotel.jpg" alt="hotel"  height="100%" width="100%" />
+    <mat-grid-tile-footer>Hotel</mat-grid-tile-footer>
   </mat-grid-tile>
 </mat-grid-list>
