--- a/src/app/picture-grid/picture-grid.component.html
+++ b/src/app/picture-grid/picture-grid.component.html
@@ -6,27 +6,27 @@
 <mat-grid-list cols="3" rowHeight="3:2" gutterSize="0.4em">
 
   <mat-grid-tile>
-    <img src="assets/photos/room2.jpg" alt="facelift" height="100%" width="100%" />
+    <img src="assets/photos/room2.jpg" alt="facelift" class="fill-available-space" />
     <mat-grid-tile-footer>Hotel Gets Facelift</mat-grid-tile-footer>
   </mat-grid-tile>
 
   <mat-grid-tile>
-    <img src="assets/photos/story1.jpg" alt="roaring"  height="100%" width="100%" />
+    <img src="assets/photos/story1.jpg" alt="roaring"  class="fill-available-space" />
     <mat-grid-tile-footer>Roaring 20's Hotel Reopens</mat-grid-tile-footer>
   </mat-grid-tile>
 
   <mat-grid-tile>
-    <img src="assets/photos/story2.jpg" alt="car"  height="100%" width="100%" />
+    <img src="assets/photos/story2.jpg" alt="car"  class="fill-available-space" />
     <mat-grid-tile-footer>Car</mat-grid-tile-footer>
   </mat-grid-tile>
 
   <mat-grid-tile>
-    <img src="assets/photos/story3.jpg" alt="jail"  height="100%" width="100%" />
+    <img src="assets/photos/story3.jpg" alt="jail"  class="fill-available-space" />
     <mat-grid-tile-footer>Politician Behind Bars</mat-grid-tile-footer>
   </mat-grid-tile>
 
   <mat-grid-tile>
-    <img src="assets/photos/story4.jpg" alt="airportwifi"  height="100%" width="100%" />
+    <img src="assets/photos/story4.jpg" alt="airportwifi"  class="fill-available-space" />
     <mat-grid-tile-footer>New WIFI in Airports</mat-grid-tile-footer>
   </mat-grid-tile>
 
