--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,4 +4,5 @@ $fa-font-path: "../node_modules/font-awesome/fonts";
 */
 
 @import url('https://fonts.googleapis.com/css?family=Material+Icons');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
