Add service to return @angular/flex-layout version

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,9 +1,10 @@
 <div fxLayout="column" fxLayoutAlign="start center" class="mat-body-1">
   <span class="mat-h2">Using:</span>
   <section class="mat-h3">
-  <ul>
-    <li>Angular version {{angularVersion}}</li>
-    <li>Angular Material version {{materialVersion}}</li>
-  </ul>
+    <ul>
+      <li>Angular version {{ angularVersion }}</li>
+      <li>Angular Material version {{ materialVersion }}</li>
+      <li>Angular FlexLayout version {{ flexLayoutVersion }}</li>
+    </ul>
   </section>
 </div>
