--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,15 +1,17 @@
-<!-- works in Angular 8.0.1 + Angular Material 8.0.1 as of June 19, 2019 -->
+<!-- works in Angular 12 + Angular Material 12 as of May 16, 2021 -->
 <mat-toolbar color="primary">
   <mat-toolbar-row #toolbarRow>
     <a mat-button [routerLink]="['/']">Angular Material Navigation</a>
     <!-- NOTE: use of $implicit below causes loop variable link to have a type of CustomLink -->
     <ng-template ngFor let-link="$implicit" [ngForOf]="links">
-      <a mat-button
+      <a
+        mat-button
         [routerLink]="link.path"
         [routerLinkActive]="['mat-button-toggle-checked', 'active-route']"
         #rla="routerLinkActive"
       >
-        {{ link.label }}</a>
+        {{ link.label }}</a
+      >
     </ng-template>
   </mat-toolbar-row>
 </mat-toolbar>
