--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,8 +1,9 @@
 <!-- works in Angular 12 + Angular Material 12 as of May 16, 2021 -->
+<!--
 <mat-toolbar color="primary">
   <mat-toolbar-row #toolbarRow>
     <a mat-button [routerLink]="['/']">Angular Material Navigation</a>
-    <!-- NOTE: use of $implicit below causes loop variable link to have a type of CustomLink -->
+
     <ng-template ngFor let-link="$implicit" [ngForOf]="links">
       <a
         mat-button
@@ -15,3 +16,17 @@
     </ng-template>
   </mat-toolbar-row>
 </mat-toolbar>
+ -->
+<mat-nav-list class="list-horizontal" color="primary">
+  <a mat-list-item [routerLink]="['/']">Angular Material Navigation</a>
+      <ng-template ngFor let-link="$implicit" [ngForOf]="links">
+      <a
+        mat-list-item
+        [routerLink]="link.path"
+        [routerLinkActive]="['mat-button-toggle-checked', 'active-route']"
+        #rla="routerLinkActive"
+      >
+        {{ link.label }}</a
+      >
+    </ng-template>
+</mat-nav-list>
