adjust About page styles

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -10,8 +10,8 @@
 </div>
 -->
 
-<mat-grid-list cols="1" rowHeight="2rem" gutterSize="1rem" role="list">
-  <mat-grid-tile rowspan="2">
+<mat-grid-list cols="1" rowHeight="2.75rem" gutterSize="0.0rem">
+  <mat-grid-tile rowspan="1">
     <span class="mat-h1">
       Angular version {{ angularVersion }}
     </span>
