--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -21,7 +21,8 @@ a.mat-button {
 
 a.active-route {
       background-color: white;
-      color: purple;
+      //color: purple;
+      color: rgb(126, 87, 194);
 }
 
 /*
