upgrade to Angular 19.1

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -6,7 +6,7 @@
       <a
         mat-button
         [routerLink]="link.path"
-        [routerLinkActive]="['mat-button-toggle-checked', 'active-route']"
+        [routerLinkActive]="['mat-button-toggle-checked', 'active-route', 'no-underline']"
         #rla="routerLinkActive"
       >
         {{ link.label }}</a
